--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body{
-  margin:0;
+  margin: 0;
   font-family: 'Roboto Slab', serif;
 }
+/* HEADER SECTION START*/
 header{
   background-image: url(donate-today-main/images/donation13.jpg);  
   background-repeat: no-repeat ;
   height: 80vh;
   background-position: center;
   background-size: cover;
-
 }
 #center{
   position: absolute;
@@ -42,8 +42,10 @@ header{
 #center a:hover{
   background-color:rgb(235, 155, 8) ;
 }
+/* HEADER SECTION END */
+/* FIRST SECTION START*/
 
-.first-sec {
+.first-sec { 
   width: 700px;
   margin: auto;
 }
@@ -73,9 +75,7 @@ header{
   font-size: 18px;
   text-align: center;
   margin-top: 20px;
-  outline-bttom:1px solid green ;
-
-
+  border-bottom:1px solid gray ;
 }
 .first-sec input[type=button]{
   display: inline-block;
@@ -97,7 +97,9 @@ header{
   font-weight: bold;
   background-color: rgba(255, 0, 0, 0.11);
 }
+/* FIRST SECTION END*/
 
+/* SECOND SECTION START*/
 
 .second-sec{
   margin-top: 100px;
@@ -133,10 +135,10 @@ header{
 .center-id-problem {
   text-align: left;
 }
+/* SECOND SECTION END*/
 
 
-
-
+/* THARD SECTION START*/
 .section-three{
   display: flex;
   justify-content: center;
@@ -175,9 +177,9 @@ header{
   border-radius: 5px;
 }
 
+/* THARD SECTION END*/
 
-
-
+/* GET-UPDATE SECTION START*/
 .get-update{
   max-width: 1000px;
   margin: auto;
@@ -195,7 +197,7 @@ header{
 .get-update div{
   width: 600px;
   height: 140px;
-  background-color: rgba(255, 0, 0, 0.411);
+  background-color: rgba(255, 0, 0, 0.253);
   margin: auto;
 }
 .get-update input{
@@ -204,15 +206,18 @@ header{
   margin: auto;
   display: inline-block;
   position: relative;
-  top: 60px;
-  left: 100px;
-  border-radius: 5px;
+  top: 50px;
+  left: 130px;
+  border-radius: 5px 0 0 5px ;
 }
 .get-update input[type=button]{
   background-color: red;
   color: white;
+  margin-left: -3px;
+  border-radius: 0 5px 5px 0  ;
   
 }
+/* GET-UPDATE SECTION END*/
 
 
 footer{
