--- a/style.css
+++ b/style.css
@@ -239,12 +239,14 @@ footer{
 }
 footer h1{
   font-family: 'Poppins', sans-serif;
+  font-family: 'The Nautigal', cursive;
   color: red;
   text-align: center;
-  padding-top: 20px;
+  padding-top: 10px;
   font-weight: 700;
+  font-size: 50px;
 }
 footer p{
   color: white;
-  padding-top: 10px;
+  
 }
